[package]
name = "lossyq"
version = "0.1.3"
authors = ["David Beck <david.beck.priv@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/dbeck/lossyq_rs"
description = "This is a single publisher, single consumer queue, that never blocks the writer, allowing it to overwrite past elements."
keywords = ["spsc", "queue"]
readme = "README.md"
homepage = "https://github.com/dbeck/lossyq_rs"
#documentation = "..."

[dependencies]
